[project]
name = "autodesk"
version = "1.0.0"
description = "Automatic standing desk controller."
readme = "README.md"
authors = [
    { name = "Daniel Oom", email = "oom.daniel@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp-jinja2>=1.6",
    "aiohttp>=3.10.9",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas-stubs>=2.2.3.241009",
    "pandas>=2.2.3",
    "pyftdi>=0.55.4",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20240917",
]
requires-python = ">=3.12"

[project.urls]
homepage = "https://github.com/daoo/autodesk"

[project.scripts]
autodesk = "autodesk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mock>=5.1.0",
    "pyright>=1.1.383",
    "pytest>=8.3.3",
    "pytest-aiohttp>=1.0.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "requests>=2.32.3",
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = ["F", "E", "W", "N", "UP", "ASYNC", "A", "C4"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
