[project]
name = "autodesk"
version = "1.0.0"
description = "Automatic standing desk controller."
readme = "README.md"
authors = [
    { name = "Daniel Oom", email = "oom.daniel@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp-jinja2>=1.6",
    "aiohttp>=3.10.9",
    "matplotlib>=3.10.5",
    "pyftdi>=0.56.0",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
]
requires-python = ">=3.12"

[project.urls]
homepage = "https://github.com/daoo/autodesk"

[project.scripts]
autodesk = "autodesk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pyright>=1.1.403",
    "pytest>=9.0.3",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.15.2",
    "ty>=0.0.16",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "N",
    "UP",
    "ASYNC",
    "A",
    "C4",
    "PT",
    "SIM",
    "I",
    "B",
    "RUF",
    "RET",
]
ignore = ["COM812"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
